text align fixed for h1-h6

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,6 +15,7 @@ body {
 }
 
 .post-content h1 {
+  text-align: center;
   font-size: 1.5rem;
   font-weight: 600;
   font-family: sans-serif;
@@ -22,9 +23,16 @@ body {
 }
 
 .post-content h2 {
+  text-align: center;
   font-size: 1.4rem;
   font-family: sans-serif;
   margin: 1.5rem 0;
+}
+.post-content h5 {
+  text-align: center;
+}
+.post-content h6 {
+  text-align: center;
 }
 
 .post-content a {
